tests/NormalTests/paczka2/big_fuzzy/88944576.err
Error in line 15: RR9Le A13 89,9
Error in line 23: RAci7mld50 A13 78,7
Error in line 17: RR9Le A593 92,3
Error in line 24: RAci7mld50 A488 98,8
Error in line 16: A467 A488 142,4
Error in line 46: kL5oOcJZYk A467 93,9
Error in line 39: M8K A488 26,1
Error in line 55: A467 A593 83,1
Error in line 66: RAci{mld50 A593 91,4
Error in line 48: RAci7mld50 A593 292,8
Error in line 67: A467 A13 52,8
Error in line 71: A467 A488 -3,6
Error in line 68: 3EsyaDo4Uus A488 25,7
Error in line 59: kL5oOcJZYk A593 31,2
Error in line 78: RAci7mld50 A593 39,1
Error in line 82: kFzQ6IWyz A13 37,3
Error in line 70: A467 A488 40,0
Error in line 88: kFzQ6IWyz A488 6,3
Error in line 89: A467 A593 33,7
Error in line 100: M8K A13 116,31
Error in line 106: kFzQ6IWyz A13 19,4
Error in line 107: kFzQ6IWyz A467 5,4
Error in line 91: RR9Le A467 12,5
Error in line 116: A467 A488 70,4
Error in line 121: RAci7mld50 A593 301,5
Error in line 128: kL5oOcJZYk A488 50,0
Error in line 117: kFzQ6IWyz A488 44,8
Error in line 124: 3EsyaDo4Uus A13 1,4
Error in line 99: M8K A13 35,4
Error in line 163: kFzQ6IWyz A593 69,1
Error in line 181: kFzQ6IWyz A13 44,3
Error in line 190: 3EsyaDo4Uus A593 81,6
Error in line 186: kFzQ6IWyz A467 34,4
Error in line 194: RR9Le A13 57,4
Error in line 196: kFzQ6IWyz A593 369,0
Error in line 213: RR9Le A467 25,7
Error in line 215: kL5oOcJZYk A488 202,75
Error in line 219: 3EsyaDo4Uus A593 75,9
Error in line 212: RAci7mld50 A488 88,2
Error in line 217: A467 A593 15,0
Error in line 228: 3EsyaDo4Uus A13 54,55
Error in line 225: RR9Le A488 62,3
Error in line 233: M8K A488 39,1
Error in line 248: RR9Le A13 83,27
